Pages/Index.razor.css
.virtWrapper {
    height: 250px;
    overflow-y:scroll;
}

.table {
    margin-left: 25px;
    margin-right: 25px;
    width: -webkit-fill-available;
}

.table th {
    background: white;
    position: sticky;
    top: 0px;
}

.row {
    display: table-row;    
}

.col {
    display:table-cell;
    position: inherit;
    width: auto;    
}

.row:hover {
    font-weight: bold;
    background-color: lightcyan;
    cursor: pointer;
    transform: scale(1.025);
    transition: transform .2s;
}

